--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.5"
   },
   "devDependencies": {
     "@types/react-dom": "^16.9.4",
+    "@types/react-router-dom": "^5.1.3",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.1",
     "file-loader": "^5.0.2",
