--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   "dependencies": {
     "@types/react-redux": "^7.1.5",
     "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/react-dom": "^16.9.4",
