--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,20 +4,20 @@
     "noImplicitAny": false,
     "module": "commonjs",
     "target": "es5",
-    "lib": [
-      "es2015",
-      "es2017",
-      "dom"
-    ],
+    "lib": ["es2015", "es2017", "dom"],
     "removeComments": true,
-    "allowSyntheticDefaultImports": false,
+    // "allowSyntheticDefaultImports": false,
+    // "baseUrl": "./",
+    // "paths": {
+    //   "Components/*": ["src/app/component/*"],
+    //   "Services/*": ["src/app/common/services/*"],
+    //   "Types/*": ["src/app/common/interface/*"],
+    //   "Utils/*": ["src/app/common/util/*"]
+    // },
     "jsx": "react",
-    "allowJs": true,
-    "typeRoots": [
-      "./node_modules/@types",
-      "./typings"
-    ]
+    "allowJs": true
+    // "typeRoots": ["./node_modules/@types", "./typings"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
