--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,17 +6,17 @@
     "target": "es5",
     "lib": ["es2015", "es2017", "dom"],
     "removeComments": true,
-    // "allowSyntheticDefaultImports": false,
-    // "baseUrl": "./",
-    // "paths": {
-    //   "Components/*": ["src/app/component/*"],
-    //   "Services/*": ["src/app/common/services/*"],
-    //   "Types/*": ["src/app/common/interface/*"],
-    //   "Utils/*": ["src/app/common/util/*"]
-    // },
+    "allowSyntheticDefaultImports": false,
+    "baseUrl": "./",
+    "paths": {
+      "Components/*": ["src/app/component/*"],
+      "Hoc/*": ["src/app/component/hoc/*"],
+      "Services/*": ["src/app/common/services/*"],
+      "Types/*": ["src/app/common/interface/*"],
+      "Utils/*": ["src/app/common/util/*"]
+    },
     "jsx": "react",
     "allowJs": true
-    // "typeRoots": ["./node_modules/@types", "./typings"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
