--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.5",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
+    "@types/validator": "^13.0.0",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "babel-eslint": "^10.1.0",
@@ -31,6 +32,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react-hooks": "^3.0.0",
     "express": "^4.17.1",
+    "form-serialize": "^0.7.2",
     "prettier": "^2.0.4",
     "prettier-eslint": "^9.0.1",
     "prettier-eslint-cli": "^5.0.0",
@@ -39,8 +41,10 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-validation": "^3.0.7",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "@types/react-dom": "^16.9.4",
