--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot --https",
     "build": "webpack --mode production",
-    "prod": "node ./server/server.js",
+    "prod": "webpack --mode production && node ./server/server.js",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src --color",
     "format": "prettier --write src/**/*.{ts,tsx,scss,css,json}",
     "isready": "yarn format && yarn lint && yarn build"
